--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,94 @@
 .App {
-  text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background-color: #DDDDDD;
+  padding: 20px;
+  height: 25%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  height: 75%;
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.main__form {
+  flex: 5;
+  padding: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main__summary {
+  flex: 2;
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  margin: 2px;
+  padding: 2px;
 }
+
+.summary__option {
+  font-size: 0.9em;
+  display: grid;
+  grid-template-areas: "key cost"
+                       "value value";
+  margin-top: 10px;
+  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.2);
+}
+
+.summary__option__label {
+  font-weight: bold;
+  grid-area: key
+}
+
+.summary__option__value {
+  grid-area: value;
+  color: lightblue;
+}
+
+.summary__option__cost {
+  grid-area: cost;
+  text-align: right;
+}
+
+
+.summary__total {
+  font-size: 1.2em;
+  display: flex;
+  margin-top: 15px;
+  border-top: solid 1px rgba(0,0,0,0.3);
+  padding: 3px;
+}
+
+.summary__total__label {
+  font-weight: bold;
+  flex: 2;
+}
+
+.summary__total__value {
+  flex: 1;
+  color: red;
+}
+
+.feature__list {
+  list-style: none;
+}
+
+.feature__option:not(.feature__selected) {
+  cursor: pointer;
+}
+
+.feature__option:not(.feature__selected):hover {
+  text-shadow: 1px 1px 2px blue;
+}
+
+.feature__option {
+  margin-top: 4px;
+  padding: 2px;
+}
+
+.feature__selected {
+  background: #DEDEDE;
+}
+
+
